--- a/src/DAppStore_frontend/src/index.scss
+++ b/src/DAppStore_frontend/src/index.scss
@@ -2,43 +2,77 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+// font-family: "Roboto", sans-serif;
 
 
+* {
+  list-style: none;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  text-decoration: none;
+  outline: none;
+}
 
 body {
-  font-family: sans-serif;
-  font-size: 1.5rem;
-}
-
-img {
-  max-width: 50vw;
-  max-height: 25vw;
-  display: block;
-  margin: auto;
-}
-
-form {
+  margin: 0;
   display: flex;
-  justify-content: center;
-  gap: 0.5em;
-  flex-flow: row wrap;
-  max-width: 40vw;
-  margin: auto;
-  align-items: baseline;
+  flex-direction: column;
+  overflow-x: hidden;
+  font-family: "Poppins", sans-serif;
+}
+.container{
+  padding: 1.5em;
+}
+.lightorange{
+  background: #FDF2E8;
+  color:#F07100CC ;
+}
+.lorange{
+  color:#F07100 ;
+}
+.roboto{
+  font-family: "Roboto", sans-serif;
+}
+.gray{
+  color: #666666;
+}
+.deeporangebg{
+  background: #F07100;
 }
 
-button[type="submit"] {
-  padding: 5px 20px;
-  margin: 10px auto;
-  float: right;
-}
+// img {
+//   max-width: 50vw;
+//   max-height: 25vw;
+//   display: block;
+//   margin: auto;
+// }
 
-#greeting {
-  margin: 10px auto;
-  padding: 10px 60px;
-  border: 1px solid #222;
-}
+// form {
+//   display: flex;
+//   justify-content: center;
+//   gap: 0.5em;
+//   flex-flow: row wrap;
+//   max-width: 40vw;
+//   margin: auto;
+//   align-items: baseline;
+// }
 
-#greeting:empty {
-  display: none;
-}
+// button[type="submit"] {
+//   padding: 5px 20px;
+//   margin: 10px auto;
+//   float: right;
+// }
+
+// #greeting {
+//   margin: 10px auto;
+//   padding: 10px 60px;
+//   border: 1px solid #222;
+// }
+
+// #greeting:empty {
+//   display: none;
+// }
