--- a/src/DAppStore_frontend/src/index.scss
+++ b/src/DAppStore_frontend/src/index.scss
@@ -23,9 +23,16 @@ body {
   flex-direction: column;
   overflow-x: hidden;
   font-family: "Poppins", sans-serif;
+  color: #333333;
+  background: #FFFBF8;
 }
 .container{
-  padding: 1.5em;
+  padding-right:1.5em ;
+  padding-left:1.5em ;
+  padding-top:1.5em ;
+  width: 100%;
+  max-width: 100% !important;
+  
 }
 .lightorange{
   background: #FDF2E8;
@@ -43,7 +50,26 @@ body {
 .deeporangebg{
   background: #F07100;
 }
+// .shadowbg{
+//   background: #FA0;
+//   filter: blur(98.71993255615234px);
+// }
+// .shadowbg {
+//   position: relative; /* make the parent a positioning context */
+//   z-index: 0; /* ensure content is above the pseudo-element */
+// }
 
+// .shadowbg::before {
+//   content: "";
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   width: 100%;
+//   height: 100%;
+//   background: #F07100;
+//   filter: blur(98.71993255615234px);
+//   z-index: -1; /* behind the content */
+// }
 // img {
 //   max-width: 50vw;
 //   max-height: 25vw;
