--- a/src/DAppStore_frontend/src/index.scss
+++ b/src/DAppStore_frontend/src/index.scss
@@ -38,7 +38,7 @@ body {
   
 }
 .lightorange{
-  background: #FDF2E8;
+  
   color:#F07100CC ;
 }
 .lorange{
@@ -52,6 +52,25 @@ body {
 }
 .deeporangebg{
   background: #F07100;
+}
+
+@media (min-width: 640px) {
+ .container{
+  padding-right: 60px;
+  padding-right:60px ;
+  padding-left:60px ;
+  width: 100%;
+  max-width: 100% !important;
+  
+}
+}
+@media (min-width: 838px) {
+ 
+  .specialcontainer {
+    max-width: 1300px;
+
+
+  }
 }
 // .shadowbg{
 //   background: #FA0;
